--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,21 @@
 /*  your css code here. If applicable */
+body{
+	background-color:#f5f5f5;
+}
+.head{
+	background-color:#011e29;
+	color:white;
+	padding:10px;
+	text-align:center;
+}
+.container{
+	display:flex;
+	gap:10px;
+	flex-direction:row;
+}
+.container-1,.container-2,.container-3{
+	background-color:white;
+	padding:10px;
+	border:1px;
+	border-radius:10px;
+}
