--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 body{
 	background-color:#f5f5f5;
 }
-.head{
+.header{
 	background-color:#011e29;
 	color:white;
 	padding:10px;
@@ -13,9 +13,29 @@ body{
 	gap:10px;
 	flex-direction:row;
 }
-.container-1,.container-2,.container-3{
+.latest-news-section,.container-2,.pictorial-news-section {
 	background-color:white;
 	padding:10px;
 	border:1px;
-	border-radius:10px;
+	border-radius:10px
+
 }
+.pictorial-news-section img {
+            max-width: 100%;
+}
+.latest-news-section {
+            background-color: white;
+            padding: 20px;
+            width: 80%;
+            margin: 20px auto;
+            border-radius: 10px;
+            color: black;
+}
+  .pictorial-news-section {
+            background-color: #ffffff;
+            padding: 20px;
+            width: 80%;
+            margin: 20px auto;
+            text-align: center;
+            border-radius: 10px;
+        }
